Bug 211277 nsPersistentProperties::nsPersistentProperties doesn't check the return value of PL_DHashTableInit r=alecf sr=dbaron